fix home page on small displays

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -115,6 +115,7 @@ body {
     .greeting-flex-container {
         display: unset;
         position: absolute;
+        margin-top: 40px;
         left: 50%;
         transform: translateX(-50%);
         top: 20vw;
